43616-81 corrected word-wrap rule for generated output

--- a/theme/norgeskart/_pure_style.scss
+++ b/theme/norgeskart/_pure_style.scss
@@ -193,7 +193,8 @@ $button-dark-blue: #0058a3;
   color: $panel-color;
   background-color: #fff;
   padding: 8px; 
-  word-break: break-word;
+  word-break: break-all;
+
   margin-bottom: 20px;
 }
 
